Fixes layout issue with general box on album/image edit

--- a/zp-core/admin.css
+++ b/zp-core/admin.css
@@ -1571,7 +1571,7 @@ span.tagMatches span {
 
 .box-edit {
 	margin: 0 0 10px 0;
-	padding: 8px 8px 8px 8px;
+	padding: 8px;
 	background-color: white;
 	border: 1px solid #cccccc;
 	border-bottom-width: 5px;
